# IceMessanger

./: .gitignore  CMakeLists.txt
cmake/: iceGenerator.cmake
ice/messanger/: messanger.ice
include/: server.h  test.h
lib/: server.cpp  test.cpp
